--- a/aru_css.css
+++ b/aru_css.css
@@ -445,9 +445,9 @@ html {
 	background-color: #555;
   }
   
-  @media screen and (max-width: 650px) {
+  /* @media screen and (max-width: 650px) {
 	.column {
 	  width: 100%;
 	  display: block;
 	}
-  }
+  } */
